clang/test/BSC/Negative/Generic/IncompleteTemplateParameters/incomplete_do_not_crash2.cbs
// RUN: %clang_cc1 -verify %s

int b<c>(){struct d<struct e<>,
// expected-error@-1 {{explicit specialization of undeclared template struct 'e'}}
// expected-error@-2 {{expected '>'}}
// expected-note@-3 {{to match this '<'}}
// expected-note@-4 {{to match this '{'}}

// expected-error@+2 {{expected expression}}
// expected-error@+1 {{expected expression}}
// expected-error@+0 {{expected '}'}}
